# pubmed-cli

./: .gitignore  README.md  pyproject.toml
pubmed_cli/: main.py  report.csv
